# alchemath

./: .gitignore
backend/: .env.example  Dockerfile  requirements.txt  run.py
backend/app/: dependencies.py  main.py
backend/app/core/: config.py  logging.py
backend/app/models/: analysis.py  commodity.py  response.py
backend/app/routers/: analysis.py  commodities.py
backend/app/services/: analysis_service.py  commodity_service.py
engine/: .clang-format.backup
engine/src/core/DataManager/: ContractCsvReader.cpp  DataManager.cpp  TimeSeries.cpp
engine/src/core/DataManager/include/: Contract.hpp  ContractCsvReader.hpp  DataManager.hpp  TimeSeries.hpp
engine/tests/: CMakeLists.txt  README.md  run_tests.sh  simple_test_main.cpp  test_contract.cpp  test_csv_reader.cpp  test_data_manager.cpp  test_timeseries.cpp  test_timeseries_simple.cpp
frontend/: README.md  SETUP_INSTRUCTIONS.md  index.html  package-lock.json  package.json
frontend/src/components/: AnalysisResults.tsx  CommoditySelector.tsx  DateRangeSelector.tsx  MetricsTable.tsx  MonthSelector.tsx  SpreadAnalysisForm.tsx  SpreadChart.tsx  YearlyChartsGrid.tsx
frontend/src/hooks/: useApi.ts
frontend/src/pages/: Index.tsx
frontend/src/services/: apiService.ts  mockApiService.ts
frontend/src/types/: analysis.ts
